chore(security): ajustes em config e serviços de segurança